--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
-    "cashfree-pg": "^5.0.8",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.15.1",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.10",
+    "razorpay": "^2.9.6",
     "sharp": "^0.34.2"
   }
 }
