--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,6 @@ dist
 
 # End of https://mrkandreev.name/snippets/gitignore-generator/#Node
 .DS_Store
+
+#scripts that i run locally
+.src/scripts
